# NeuroSync

./: README.md  requirements.txt
Notebooks/: Untitled.ipynb
neurosync/: pyproject.toml
pages/: Research_Paper.py
src/neurosync/: crew.py  main.py
