[tool.poetry]
name = "neurosync"
version = "0.1.0"
description = "neurosync using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }

[tool.poetry.scripts]
neurosync = "neurosync.main:run"
run_crew = "neurosync.main:run"
train = "neurosync.main:train"
replay = "neurosync.main:replay"
test = "neurosync.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
